--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,12 +5,27 @@
 
 h1 {
     margin: 40px 0 40px 0;
-    color: aliceblue;
+    color:blanchedalmond
 }
 
 body {
-    background-color: rgb(3, 0, 0);
+    background-image: linear-gradient(45deg, #0D4A3A, #2D5731, #526126);
+    background-image: url("https://img.olhardigital.com.br/wp-content/uploads/2023/09/2024-ford-f-150-3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 450px;
+    background-attachment: fixed;
+    
 }
+
+.login{
+    text-align: center;
+}
+
+
+
+
 
 .box,
 form {
